--- a/src/app/features/pokemon/components/navigation/navigation.component.scss
+++ b/src/app/features/pokemon/components/navigation/navigation.component.scss
@@ -1,12 +1,19 @@
 .nav-buttons {
-    display: flex;
-    justify-content: center;
-    gap: 16px;
-    margin-top: 20px;
-  
-    button {
-      padding: 8px 16px;
-      cursor: pointer;
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+
+  button {
+    padding: 10px 16px;
+    border: none;
+    background-color: #10b981;
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 500;
+
+    &:hover {
+      background-color: #059669;
     }
   }
-  
+}
