--- a/src/app/features/pokemon/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/features/pokemon/components/pokemon-card/pokemon-card.component.scss
@@ -1,21 +1,30 @@
 .card {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 1rem;
-    max-width: 300px;
-    margin: 0 auto;
-    text-align: center;
-    background-color: #f8f8f8;
-  
-    img {
-      width: 120px;
-      height: 120px;
-      object-fit: contain;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  max-width: 400px;
+  width: 100%;
+  text-align: center;
+
+  h2 {
+    margin-bottom: 1rem;
+    color: #374151;
+  }
+
+  img {
+    width: 150px;
+    height: 150px;
+    object-fit: contain;
+    margin-bottom: 1rem;
+  }
+
+  .info {
+    text-align: left;
+    font-size: 16px;
+
+    p {
+      margin: 0.5rem 0;
     }
-  
-    .info {
-      margin-top: 1rem;
-      text-align: left;
-    }
+  }
 }
-  
