--- a/src/app/features/pokemon/pages/pokemon-page/pokemon-page.component.html
+++ b/src/app/features/pokemon/pages/pokemon-page/pokemon-page.component.html
@@ -1,7 +1,7 @@
 <app-pokemon-search (search)="handleSearch($event)"></app-pokemon-search>
 
 <div *ngIf="error" class="error">{{ error }}</div>
-
+<div *ngIf="isLoading" class="loading">Cargando Pokémon...</div>
 <app-pokemon-card *ngIf="pokemonData" [pokemon]="pokemonData"></app-pokemon-card>
 
 <app-navigation
@@ -9,3 +9,7 @@
   [currentId]="pokemonData.id"
   (navigate)="handleNavigation($event)">
 </app-navigation>
+
+<footer class="footer">
+  <p>Desarrollado por Alejandro Sanmiguel</p>
+</footer>
